@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-09T16:14:46Z",
-  "count_outdated" : 1109,
-  "uniques_outdated" : 320,
+  "timestamp" : "2024-05-13T16:16:04Z",
+  "count_outdated" : 1124,
+  "uniques_outdated" : 322,
   "count" : 1145,
   "uniques" : 325,
   "views" : [
-    {
-      "timestamp": "2024-04-29T00:00:00Z",
-      "count": 15,
-      "count_minmax": [ 2, 15 ],
-      "count_decinc": [ 0, 15 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-05-02T00:00:00Z",
       "count": 4,
