@@ -1,12 +1,7 @@
 {
-  "count": 36,
-  "uniques": 4,
+  "count": 21,
+  "uniques": 3,
   "views": [
-    {
-      "timestamp": "2024-04-29T00:00:00Z",
-      "count": 15,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-05-02T00:00:00Z",
       "count": 4,
